--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   rabbit:
+    container_name: mercadona-rabbitmq
     image: rabbitmq:3-management
     hostname: rabbit
     environment:
