--- a/common/pom.xml
+++ b/common/pom.xml
@@ -31,6 +31,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-configuration-processor</artifactId>
+        	<optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 </project>
