--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
     </properties>
 
     <groupId>me.ssn</groupId>
-    <artifactId>websockets-and-rabbitmq-demo</artifactId>
+    <artifactId>tms-mercadona-poc</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>websockets-and-rabbitmq-demo</name>
+    <name>tms-mercadona-poc</name>
     <description>Demo project for Spring Boot</description>
     <packaging>pom</packaging>
 
