--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8001
-logging.level.me.ssn.wsmessaging=debug
+logging.level.com.vass.wsmessaging=debug
 logging.level.org.springframework.messaging=debug
 
-# due to me.ssn.wsamq.gateway.config.WebSocketConfiguration.userDestinationResolver
+# due to com.vass.wsamq.gateway.config.WebSocketConfiguration.userDestinationResolver
 spring.main.allow-bean-definition-overriding=true
