--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <com.fasterxml.jackson.version>2.10.0.pr3</com.fasterxml.jackson.version>
     </properties>
 
-    <groupId>me.ssn</groupId>
+    <groupId>com.vass</groupId>
     <artifactId>tms-mercadona-poc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>tms-mercadona-poc</name>
