--- a/sender-stomp-integration/pom.xml
+++ b/sender-stomp-integration/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>tms-mercadona-poc</artifactId>
-        <groupId>me.ssn</groupId>
+        <groupId>com.vass</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>me.ssn</groupId>
+            <groupId>com.vass</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
